# trafficer

./: CMakeLists.txt  README.md  main.cpp
src/: AgentDataStore.cpp  AgentDataStore.h  AgentHostInfo.cpp  AgentHostInfo.h  AgentMainfunc.cpp  AgentMainfunc.h  AgentManageClient.cpp  AgentManageClient.h  AgentMessageDispatcher.cpp  AgentMessageDispatcher.h  AgentTcpTrafficRecver.cpp  AgentTcpTrafficRecver.h  AgentTcpTrafficSender.cpp  AgentTcpTrafficSender.h  AgentUdpTrafficRecver.cpp  AgentUdpTrafficRecver.h  AgentUdpTrafficSender.cpp  AgentUdpTrafficSender.h  Envcfg.h  MccCommandConsole.cpp  MccCommandConsole.h  MccDataStore.cpp  MccDataStore.h  MccMainfunc.cpp  MccMainfunc.h  MccManageServer.cpp  MccManageServer.h  MccMessageDispatcher.cpp  MccMessageDispatcher.h  TcpMessageConnection.cpp  TcpMessageConnection.h  TcpSocket.h  TcpTrafficStatistic.cpp  TcpTrafficStatistic.h  TrafficInstanceConfig.cpp  TrafficInstanceConfig.h  Trafficer.h  TrafficerAgent.cpp  TrafficerAgent.h  TrafficerMasterControlCenter.cpp  (+4 more)
src/base/: BoundedBlockingQueue.h  Copyable.h  Event.cpp  Event.h  Exception.cpp  Exception.h  Json.cpp  Json.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  NonCopyable.h  Thread.cpp  Thread.h  TimeStamp.cpp  TimeStamp.h  TimerQueue.h  UtilSet.cpp  UtilSet.h
src/base/tests/: blockQueueTest.cpp  genUuidTest.cpp  ifethTest.cpp  loggerTest.cpp
src/model/: AbstractTrafficModel.cpp  AbstractTrafficModel.h  CustomTrafficModel.cpp  CustomTrafficModel.h  PoissonTrafficModel.cpp  PoissonTrafficModel.h  RectangleTrafficModel.cpp  RectangleTrafficModel.h  StableTrafficModel.cpp  StableTrafficModel.h  TrafficConfig.cpp  TrafficConfig.h
src/msg/: AgentCommandResponseMessage.cpp  AgentCommandResponseMessage.h  AgentHeartBeatMessage.cpp  AgentHeartBeatMessage.h  AgentRegistrationMessage.cpp  AgentRegistrationMessage.h  AgentTrafficReportMessage.cpp  AgentTrafficReportMessage.h  MccCommandRequestMessage.cpp  MccCommandRequestMessage.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h
src/net/: InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  TcpSocket.cpp  TcpSocket.h  UdpConnectedSocket.cpp  UdpConnectedSocket.h  UdpSocket.cpp  UdpSocket.h
src/thread/: Event.cpp  Event.h  Message.h  MessageQueue.cpp  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h
